infrastructure/k8s/db-soldier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-soldier
spec:
  selector:
    app: db-soldier
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
