infrastructure/k8s/db-soldier-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: db-soldier
spec:
  to:
    kind: Service
    name: db-soldier
  port:
    targetPort: 8000
  tls:
    termination: edge
